--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,23 @@
 {
-  "clang-format.fallbackStyle": "Google",
-  "editor.formatOnSave": true,
-  "clang-tidy.lintOnSave": true,
-  "clang-tidy.blacklist": ["lib/*"],
-  "clang-tidy.compilerArgs": [],
-  "clang-tidy.compilerArgsBefore": [
-    "-Iincludes"
-  ],
-  "C_Cpp.clang_format_sortIncludes": false,
-  "C_Cpp.formatting": "Disabled",
-  "C_Cpp.inactiveRegionOpacity": null,
-  "files.exclude": {
-    "**/.*": true,
-    "lib/*.cc": true
-  }
+    "clang-format.fallbackStyle": "Google",
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "xaver.clang-format",
+    "[cpp]": {
+        "editor.defaultFormatter": "xaver.clang-format"
+    },
+    "clang-tidy.lintOnSave": true,
+    "clang-tidy.blacklist": [],
+    "clang-tidy.compilerArgs": ["-std=c++20"],
+    "clang-tidy.compilerArgsBefore": [
+        "-Iincludes",
+        "-Wunused-variable",
+        "-Wuninitialized",
+        "-Wunused-value"
+    ],
+    "C_Cpp.clang_format_sortIncludes": false,
+    "C_Cpp.vcFormat": "Disabled",
+    "C_Cpp.inactiveRegionOpacity": null,
+    "files.exclude": {
+        "**/.*": true
+    }
 }
